Added and marked up footer

--- a/style.scss
+++ b/style.scss
@@ -343,7 +343,6 @@ header {
   margin-top: 100px;
   .all-projects__slogan {
     @include slogan();
-    // margin-top: 100px;
     margin-bottom: 50px;
     color: #000000;
   }
@@ -371,7 +370,7 @@ header {
 // sixth section
 .video {
   @include flex(flex-start, column);
-  height: 1082px;
+  height: 1110px;
   position: relative;
   &::before {
     content: "";
@@ -485,5 +484,107 @@ header {
         }
       }
     }
+  }
+}
+
+// footer
+footer {
+  min-height: 413px;
+  @include flex(flex-start, column);
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #f6f6f8;
+    top: 0;
+    z-index: -1;
+  }
+  .footer__wrapper {
+    @include mainCol();
+    @include flex();
+    align-items: flex-start;
+    min-height: 305px;
+    margin-top: 70px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #e0e0e0;
+    > div {
+      width: 242px;
+      height: 235px;
+      margin-right: 43px;
+      &:last-of-type {
+        margin-right: 0;
+      }
+      > h3 {
+        @include smallSlogan();
+        margin-bottom: 35px;
+      }
+      ul > li {
+        position: relative;
+        margin-bottom: 30px;
+        padding-left: 17px;
+        &:last-child {
+          margin-bottom: 70px;
+        }
+        &::before {
+          content: "";
+          width: 5px;
+          height: 9px;
+          position: absolute;
+          background-image: url(./images/arrow.svg);
+          left: 0;
+          top: calc(50% - 4.5px);
+        }
+      }
+      .contacts__list > li {
+        padding-left: 30px;
+        position: relative;
+        &:first-child::before {
+          content: "";
+          width: 15px;
+          height: 11.42px;
+          position: absolute;
+          background-image: url(./images/mail.svg);
+          background-position: center;
+          top: calc(50% - 6px);
+          left: 0;
+        }
+        &:nth-child(2)::before {
+          content: "";
+          width: 15px;
+          height: 15px;
+          position: absolute;
+          background-image: url(./images/phone.svg);
+          background-position: center;
+          top: calc(50% - 8px);
+          left: 0;
+        }
+        &:last-child::before {
+          content: "";
+          width: 11px;
+          height: 15px;
+          position: absolute;
+          background-image: url(./images/placeholder.svg);
+          background-position: center;
+          top: calc(50% - 8px);
+          left: 0;
+        }
+      }
+      li > a {
+        font-size: $fs - 2px;
+        font-weight: 400;
+        line-height: $fs + 6px;
+        color: $grey;
+      }
+    }
+  }
+
+  .footer__copyright {
+    font-size: $fs - 3px;
+    line-height: $fs + 5px;
+    font-weight: 400;
+    color: $grey;
+    margin-bottom: 30px;
   }
 }
