--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ h3,
 h4,
 h5,
 h6,
-ul {
+ul,
+a {
   margin: 0;
 }
 
@@ -474,7 +475,7 @@ header nav.navigation .nav-link:hover::after {
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  height: 1082px;
+  height: 1110px;
   position: relative;
 }
 .video::before {
@@ -620,6 +621,116 @@ header nav.navigation .nav-link:hover::after {
   width: 190px;
   padding-left: 26px;
   border-radius: 0px 30px 30px 0px;
+}
+
+footer {
+  min-height: 413px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  position: relative;
+}
+footer::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #f6f6f8;
+  top: 0;
+  z-index: -1;
+}
+footer .footer__wrapper {
+  width: 1110px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  align-items: flex-start;
+  min-height: 305px;
+  margin-top: 70px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #e0e0e0;
+}
+footer .footer__wrapper > div {
+  width: 242px;
+  height: 235px;
+  margin-right: 43px;
+}
+footer .footer__wrapper > div:last-of-type {
+  margin-right: 0;
+}
+footer .footer__wrapper > div > h3 {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 22px;
+  color: #000;
+  margin-bottom: 35px;
+}
+footer .footer__wrapper > div ul > li {
+  position: relative;
+  margin-bottom: 30px;
+  padding-left: 17px;
+}
+footer .footer__wrapper > div ul > li:last-child {
+  margin-bottom: 70px;
+}
+footer .footer__wrapper > div ul > li::before {
+  content: "";
+  width: 5px;
+  height: 9px;
+  position: absolute;
+  background-image: url(./images/arrow.svg);
+  left: 0;
+  top: calc(50% - 4.5px);
+}
+footer .footer__wrapper > div .contacts__list > li {
+  padding-left: 30px;
+  position: relative;
+}
+footer .footer__wrapper > div .contacts__list > li:first-child::before {
+  content: "";
+  width: 15px;
+  height: 11.42px;
+  position: absolute;
+  background-image: url(./images/mail.svg);
+  background-position: center;
+  top: calc(50% - 6px);
+  left: 0;
+}
+footer .footer__wrapper > div .contacts__list > li:nth-child(2)::before {
+  content: "";
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  background-image: url(./images/phone.svg);
+  background-position: center;
+  top: calc(50% - 8px);
+  left: 0;
+}
+footer .footer__wrapper > div .contacts__list > li:last-child::before {
+  content: "";
+  width: 11px;
+  height: 15px;
+  position: absolute;
+  background-image: url(./images/placeholder.svg);
+  background-position: center;
+  top: calc(50% - 8px);
+  left: 0;
+}
+footer .footer__wrapper > div li > a {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #999999;
+}
+footer .footer__copyright {
+  font-size: 13px;
+  line-height: 21px;
+  font-weight: 400;
+  color: #999999;
+  margin-bottom: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
