--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,21 @@ $baseAlign: center;
 @mixin mainCol {
   width: 1110px;
   margin: 0 auto;
+  @include _1280 {
+    width: 750px;
+  }
+  @include _1024 {
+    width: 600px;
+  }
+  @include _768 {
+    width: 450px;
+  }
+  @include _640 {
+    width: 380px;
+  }
+  @include _400 {
+    width: 300px;
+  }
 }
 @mixin slogan {
   font-size: $fs * 2.25;
@@ -40,31 +55,116 @@ $baseAlign: center;
   font-size: $fs;
   line-height: $fs * 1.25;
   color: $white;
-  padding: 13px 36px 15px;
+  padding: 15px 36px 15px;
   text-align: center;
-  width: 200px;
-  height: 45px;
+  max-width: 200px;
   background: $primery;
   box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
   border-radius: 30px;
   border: none;
+  @include _1280 {
+    font-size: $fs - 1px;
+    font-size: $fs + 1px;
+    padding: 13px 25px 13px;
+  }
+  @include _1024 {
+    font-size: $fs - 2px;
+    line-height: $fs;
+    padding: 11px 20px 11px;
+  }
+  @include _768 {
+    font-size: $fs * 0.75;
+    line-height: $fs - 2px;
+    padding: 9px 20px 9px;
+  }
+  @include _640 {
+    font-size: $fs - 6px;
+    line-height: $fs - 4px;
+    padding: 7px 15px 7px;
+  }
+  @include _400 {
+    font-size: $fs / 2;
+    line-height: $fs - 6px;
+    padding: 5px 10px 5px;
+  }
 }
+
+//media_mixin.scss
+@mixin _1280 {
+  @media screen and (max-width: 1280px) {
+    @content;
+  }
+}
+@mixin _1024 {
+  @media screen and (max-width: 1024px) {
+    @content;
+  }
+}
+@mixin _768 {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+@mixin _640 {
+  @media screen and (max-width: 640px) {
+    @content;
+  }
+}
+@mixin _400 {
+  @media screen and (max-width: 400px) {
+    @content;
+  }
+}
+
 // header
 header {
   height: 100px;
   border-bottom: 1px solid #a1a1a150;
   position: relative;
   z-index: 2;
+  @include _1024 {
+    height: 90px;
+  }
+  @include _768 {
+    height: 80px;
+  }
+  @include _640 {
+    height: 50px;
+  }
+  @include _400 {
+    height: 50px;
+  }
   @include flex(center);
   nav.navigation {
     @include flex(flex-end);
     @include mainCol();
+    align-items: baseline;
     .nav-link {
       color: $white;
       font-weight: 500;
       font-size: $fs;
       line-height: $fs * 1.25;
       margin-right: 40px;
+      @include _1280 {
+        font-size: $fs - 1px;
+        margin-right: 36px;
+      }
+      @include _1024 {
+        font-size: $fs - 2px;
+        margin-right: 30px;
+      }
+      @include _768 {
+        font-size: $fs * 0.75;
+        margin-right: 16px;
+      }
+      @include _640 {
+        font-size: $fs - 6px;
+        margin-right: 10px;
+      }
+      @include _400 {
+        font-size: $fs / 2;
+        margin-right: 10px;
+      }
       position: relative;
       &:last-child {
         margin-right: 0;
@@ -79,6 +179,30 @@ header {
           left: -20px;
           bottom: -39px;
           background: $white;
+          @include _1280 {
+            width: calc(100% + 36px);
+            left: -18px;
+          }
+          @include _1024 {
+            width: calc(100% + 30px);
+            left: -15px;
+            bottom: -34px;
+          }
+          @include _768 {
+            width: calc(100% + 16px);
+            left: -8px;
+            bottom: -29px;
+          }
+          @include _640 {
+            width: calc(100% + 10px);
+            left: -5px;
+            bottom: -14px;
+          }
+          @include _400 {
+            width: calc(100% + 10px);
+            left: -5px;
+            bottom: -14px;
+          }
         }
       }
     }
@@ -87,37 +211,119 @@ header {
 
 //first section
 .intro {
-  height: 900px;
+  max-height: 900px;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     url(./images/Rectangle.png);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   position: relative;
   margin-top: -100px;
-  color: $white;
-  font-size: $fs;
-  @include flex(flex-start, column);
-  .intro__title {
+  @include _1024 {
+    margin-top: -90px;
+  }
+  @include _768 {
+    margin-top: -80px;
+  }
+  @include _640 {
+    margin-top: -50px;
+  }
+  @include _400 {
+    margin-top: -50px;
+  }
+  .intro__wrapper {
     @include mainCol();
-    font-weight: 500;
-    line-height: $fs * 1.25;
-    text-align: center;
-    margin-top: 319px;
-    margin-bottom: 20px;
-  }
-  .intro__slogan {
-    font-size: $fs * 3;
-    width: 829px;
-    font-weight: 800;
-    text-align: center;
-    margin-bottom: 50px;
-    line-height: $fs * 4;
-  }
-  .intro__button {
-    @include button();
-    margin-bottom: 318px;
+    @include flex(flex-start, column);
+    .intro__title {
+      max-width: 175px;
+      font-size: $fs;
+      font-weight: 500;
+      line-height: $fs * 1.25;
+      color: $white;
+      text-align: center;
+      margin-top: 318px;
+      margin-bottom: 20px;
+      @include _1280 {
+        font-size: $fs - 1px;
+        margin-top: 265px;
+      }
+      @include _1024 {
+        font-size: $fs - 2px;
+        margin-top: 212px;
+        margin-bottom: 15px;
+      }
+      @include _768 {
+        font-size: $fs * 0.75;
+        margin-top: 159px;
+        margin-bottom: 15px;
+      }
+      @include _640 {
+        font-size: $fs - 6px;
+        margin-top: 159px;
+        margin-bottom: 10px;
+      }
+      @include _400 {
+        font-size: $fs / 2;
+        margin-top: 106px;
+        margin-bottom: 10px;
+      }
+    }
+    .intro__slogan {
+      max-width: 829px;
+      font-size: $fs * 3;
+      font-weight: 800;
+      text-align: center;
+      margin-bottom: 50px;
+      line-height: $fs * 4;
+      color: $white;
+      @include _1280 {
+        font-size: $fs * 2.5;
+        line-height: $fs * 3.5;
+        margin-bottom: 45px;
+      }
+      @include _1024 {
+        font-size: $fs * 2.25;
+        line-height: $fs * 3.25;
+        margin-bottom: 40px;
+      }
+      @include _768 {
+        font-size: $fs + 10px;
+        line-height: $fs + 26px;
+        margin-bottom: 30px;
+      }
+      @include _640 {
+        font-size: $fs + 6px;
+        line-height: $fs + 22px;
+        margin-bottom: 30px;
+      }
+      @include _400 {
+        font-size: $fs + 2px;
+        line-height: $fs * 2;
+        margin-bottom: 25px;
+      }
+    }
+    .intro__button {
+      @include button();
+      margin-bottom: 318px;
+      @include _1280 {
+        margin-bottom: 265px;
+      }
+      @include _1024 {
+        margin-bottom: 212px;
+      }
+      @include _768 {
+        margin-bottom: 159px;
+      }
+      @include _640 {
+        margin-bottom: 159px;
+      }
+      @include _400 {
+        margin-bottom: 106px;
+      }
+    }
   }
 }
+
 // second section
 .services {
   min-height: 703px;
@@ -126,13 +332,13 @@ header {
   @include flex(flex-start, column);
   h2 {
     @include slogan;
-    width: 751px;
+    max-width: 751px;
     text-align: center;
     margin-top: 110px;
     margin-bottom: 50px;
   }
   .slogan__description {
-    width: 730px;
+    max-width: 730px;
     @include text;
     text-align: center;
     margin-bottom: 70px;
@@ -335,35 +541,37 @@ header {
     top: 0;
     z-index: -1;
   }
-}
-.all-projects__wrapper {
-  @include mainCol();
-  @include flex(center, column);
-  top: 0px;
-  margin-top: 100px;
-  .all-projects__slogan {
-    @include slogan();
-    margin-bottom: 50px;
-    color: #000000;
-  }
-  .all-projects__text {
-    @include text();
-    width: 730px;
-    margin-bottom: 70px;
-    text-align: center;
-  }
-  .all-projects__list {
+
+  .all-projects__wrapper {
     @include mainCol();
-    @include flex(space-between);
-    flex-wrap: wrap;
-    .list__item {
-      width: calc(100% / 4 - 22.5px);
+    @include flex(center, column);
+    top: 0px;
+    margin-top: 100px;
+    .all-projects__slogan {
+      @include slogan();
+      max-width: 350px;
       margin-bottom: 50px;
+      color: #000000;
     }
-  }
-  .all-projects__more {
-    @include button();
-    margin-bottom: 130px;
+    .all-projects__text {
+      @include text();
+      max-width: 730px;
+      margin-bottom: 70px;
+      text-align: center;
+    }
+    .all-projects__list {
+      @include mainCol();
+      @include flex(space-between);
+      flex-wrap: wrap;
+      .list__item {
+        width: calc(100% / 4 - 22.5px);
+        margin-bottom: 50px;
+      }
+    }
+    .all-projects__more {
+      @include button();
+      margin-bottom: 130px;
+    }
   }
 }
 
