--- a/reset.scss
+++ b/reset.scss
@@ -24,9 +24,14 @@ ul {
   list-style: none;
   padding: 0;
 }
-* .empty {
-  margin-bottom: 0px !important;
+* .empty-item {
+  margin-bottom: 0px;
   @media screen and (max-width: 1280px) {
     display: none;
+  }
+}
+*.empty-125 {
+  @media screen and (max-width: 1280px) {
+    margin-bottom: 0px !important;
   }
 }
