--- a/style.css
+++ b/style.css
@@ -29,12 +29,18 @@ ul {
   padding: 0;
 }
 
-* .empty {
-  margin-bottom: 0px !important;
+* .empty-item {
+  margin-bottom: 0px;
 }
 @media screen and (max-width: 1280px) {
-  * .empty {
+  * .empty-item {
     display: none;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  *.empty-125 {
+    margin-bottom: 0px !important;
   }
 }
 
@@ -59,11 +65,6 @@ header {
   }
 }
 @media screen and (max-width: 640px) {
-  header {
-    height: 50px;
-  }
-}
-@media screen and (max-width: 400px) {
   header {
     height: 50px;
   }
@@ -883,30 +884,91 @@ header nav.navigation .nav-link:hover::after {
 }
 
 .about-us {
-  height: 797px;
-  background: #f6f6f8;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
 }
+.about-us::before {
+  content: "";
+  background: #f6f6f8;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+}
 .about-us .about-us__wrapper {
+  width: 1110px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  width: 1110px;
-  height: 490px;
-  align-items: flex-start;
   border-bottom: 1px solid #e0e0e0;
   margin-top: 100px;
   margin-bottom: 70px;
 }
+@media screen and (max-width: 1280px) {
+  .about-us .about-us__wrapper {
+    width: 750px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .about-us__wrapper {
+    width: 600px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .about-us__wrapper {
+    width: 450px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .about-us .about-us__wrapper {
+    width: 380px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .about-us .about-us__wrapper {
+    width: 300px;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .about-us .about-us__wrapper {
+    flex-direction: column;
+    text-align: center;
+    margin-top: 83px;
+    margin-bottom: 58px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .about-us__wrapper {
+    margin-top: 67px;
+    margin-bottom: 47px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .about-us__wrapper {
+    margin-top: 50px;
+    margin-bottom: 35px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .about-us .about-us__wrapper {
+    margin-top: 33px;
+    margin-bottom: 23px;
+  }
+}
 .about-us .about-us__wrapper .about-us__info {
-  width: 489px;
-  max-height: 400px;
-  margin-top: 52px;
+  margin-right: 121px;
+}
+@media screen and (max-width: 1280px) {
+  .about-us .about-us__wrapper .about-us__info {
+    width: calc(100% - 40px);
+    margin-right: 0;
+  }
 }
 .about-us .about-us__wrapper .about-us__info .about-us__slogan {
   font-size: 36px;
@@ -945,13 +1007,31 @@ header nav.navigation .nav-link:hover::after {
     line-height: 27px;
   }
 }
+@media screen and (max-width: 1280px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__slogan {
+    margin-bottom: 33px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__slogan {
+    margin-bottom: 27px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__slogan {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__slogan {
+    margin-bottom: 13px;
+  }
+}
 .about-us .about-us__wrapper .about-us__info .about-us__text {
   font-size: 16px;
   font-weight: 400;
   line-height: 25px;
   color: #999999;
-  overflow: hidden;
-  max-height: 117px;
   margin-bottom: 30px;
 }
 @media screen and (max-width: 1280px) {
@@ -984,46 +1064,363 @@ header nav.navigation .nav-link:hover::after {
     line-height: 8px;
   }
 }
+@media screen and (max-width: 1280px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__text {
+    margin-bottom: 25px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__text {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__text {
+    margin-bottom: 15px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__text {
+    margin-bottom: 10px;
+  }
+}
 .about-us .about-us__wrapper .about-us__info .about-us__more {
+  margin-bottom: 90px;
+}
+@media screen and (max-width: 1280px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__more {
+    margin-bottom: 75px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__more {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__more {
+    margin-bottom: 45px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__more {
+    margin-bottom: 30px;
+  }
+}
+.about-us .about-us__wrapper .about-us__info .about-us__more .about-us__more-link {
   font-size: 16px;
   line-height: 20px;
   font-weight: 500;
   color: #4985ff;
   text-decoration: underline;
 }
-.about-us .about-us__projects-list {
+@media screen and (max-width: 1280px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__more .about-us__more-link {
+    font-size: 15px;
+    line-height: 18px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__more .about-us__more-link {
+    font-size: 12px;
+    line-height: 14px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__more .about-us__more-link {
+    font-size: 9px;
+    line-height: 11px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__more .about-us__more-link {
+    font-size: 7px;
+    line-height: 9px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .about-us .about-us__wrapper .about-us__info .about-us__more .about-us__more-link {
+    font-size: 5.3333333333px;
+    line-height: 8px;
+  }
+}
+.about-us .about-us__wrapper .about-us__image {
+  margin-bottom: 90px;
+}
+@media screen and (max-width: 1280px) {
+  .about-us .about-us__wrapper .about-us__image {
+    width: 400px;
+    height: 320px;
+    margin-bottom: 20px;
+    order: -1;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .about-us__wrapper .about-us__image {
+    width: 300px;
+    height: 240px;
+    margin-bottom: 20px;
+    order: -1;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .about-us__wrapper .about-us__image {
+    width: 200px;
+    height: 160px;
+    margin-bottom: 20px;
+    order: -1;
+  }
+}
+@media screen and (max-width: 640px) {
+  .about-us .about-us__wrapper .about-us__image {
+    width: 100px;
+    height: 80px;
+    margin-bottom: 20px;
+    order: -1;
+  }
+}
+.about-us .projects-wrapper {
+  width: 1110px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: row;
 }
-.about-us .about-us__projects-list .projects__item {
+@media screen and (max-width: 1280px) {
+  .about-us .projects-wrapper {
+    width: 750px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .projects-wrapper {
+    width: 600px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .projects-wrapper {
+    width: 450px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .about-us .projects-wrapper {
+    width: 380px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .about-us .projects-wrapper {
+    width: 300px;
+  }
+}
+.about-us .projects-wrapper .about-us__projects-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 920px;
+}
+@media screen and (max-width: 1280px) {
+  .about-us .projects-wrapper .about-us__projects-list {
+    width: 622px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .projects-wrapper .about-us__projects-list {
+    width: 498px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .projects-wrapper .about-us__projects-list {
+    width: 374px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .about-us .projects-wrapper .about-us__projects-list {
+    width: 317px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .about-us .projects-wrapper .about-us__projects-list {
+    width: 250px;
+  }
+}
+.about-us .projects-wrapper .about-us__projects-list .projects__item {
   position: relative;
-  width: 104px;
-  height: 67px;
-  margin-right: 100px;
+  width: calc(100% / 5 + 20px);
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 70px;
 }
-.about-us .about-us__projects-list .projects__item:last-child {
-  margin-right: 0;
+@media screen and (min-width: 1281px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(5n) {
+    width: 104px;
+  }
 }
-.about-us .about-us__projects-list .projects__item .item__info {
+@media screen and (max-width: 1280px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item {
+    width: calc(100% / 4 + 20px);
+    margin-bottom: 58px;
+  }
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(4n) {
+    width: 94px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item {
+    width: calc(100% / 3 + 20px);
+    margin-bottom: 47px;
+  }
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(3n) {
+    width: 84px;
+  }
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(4n) {
+    width: calc(100% / 3 + 20px);
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item {
+    width: calc(100% / 3 + 20px);
+    margin-bottom: 35px;
+  }
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(3n) {
+    width: 64px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item {
+    width: calc(100% / 2);
+    margin-bottom: 35px;
+  }
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(2n) {
+    width: 44px;
+  }
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(3n) {
+    width: calc(100% / 2);
+  }
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(6n) {
+    width: 44px;
+  }
+}
+.about-us .projects-wrapper .about-us__projects-list .projects__item .item__info {
   font-size: 36px;
   padding-left: 50px;
 }
-.about-us .about-us__projects-list .projects__item .item__info::before {
+.about-us .projects-wrapper .about-us__projects-list .projects__item .item__info::before {
   content: "";
   position: absolute;
   background-image: url(./images/projects-item__image.png);
+  background-repeat: no-repeat;
   width: 30px;
   height: 30px;
   left: 0;
-  top: 8.8px;
+  top: 9px;
 }
-.about-us .about-us__projects-list .projects__item .item__slogan {
+@media screen and (max-width: 1280px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info::before {
+    background-size: 28px;
+    width: 28px;
+    height: 28px;
+    top: 8px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info::before {
+    width: 22px;
+    height: 22px;
+    background-size: 22px;
+    top: 6px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info::before {
+    width: 16px;
+    height: 16px;
+    background-size: 16px;
+    top: 4px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info::before {
+    width: 13px;
+    height: 13px;
+    background-size: 13px;
+    top: 3px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info::before {
+    width: 10px;
+    height: 10px;
+    background-size: 10px;
+    top: 1;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info {
+    font-size: 34px;
+    padding-left: 45px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info {
+    font-size: 27px;
+    padding-left: 35px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info {
+    font-size: 20px;
+    padding-left: 26px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info {
+    font-size: 16px;
+    padding-left: 20px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info {
+    font-size: 12px;
+    padding-left: 15px;
+  }
+}
+.about-us .projects-wrapper .about-us__projects-list .projects__item .item__slogan {
   font-size: 16px;
+  font-weight: 400;
   line-height: 25px;
   color: #999999;
+}
+@media screen and (max-width: 1280px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__slogan {
+    font-size: 15px;
+    line-height: 23px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__slogan {
+    font-size: 12px;
+    line-height: 18.75px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__slogan {
+    font-size: 9px;
+    line-height: 14px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__slogan {
+    font-size: 7px;
+    line-height: 11px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__slogan {
+    font-size: 5.3333333333px;
+    line-height: 8px;
+  }
 }
 
 .all-services {
