--- a/reset.scss
+++ b/reset.scss
@@ -10,6 +10,10 @@ ul,
 a {
   margin: 0;
 }
+main {
+  overflow-x: hidden;
+  width: 100vw;
+}
 * {
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
